# AI-Data-Anonymizer

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  SICUREZZA.md  add-changelog.patch.b64  bump-version-0.4.0.patch.b64  fix-combobox.patch.b64  fix-rail-width.patch.b64  fix-stepper.patch.b64  pyproject.toml
.github/workflows/: build-windows.yml  release-v0.3.0.yml  release-v0.5.0.yml  tests.yml
assets/: app_icon.icns
documenti_di_prova/: documento_prova_anonimizzazione.docx  documento_prova_anonimizzazione.txt
scripts/: build_macos_app.sh  build_windows_app.ps1  create_app_icon.py  dmg_settings.py  run_web.sh
src/privacy_guardian/: activity_log.py  app.py  app.py.rej  app.py.rej.orig  document_service.py  entity_categories.py  findings_panel.py  first_names.py  italian_privacy_engine.py  models.py  ner_recognizer.py  privacy_engine.py  reporting.py  reversible.py  styles.py  styles.py.rej  web_app.py
src/privacy_guardian/assets/: nomi_italiani.txt
src/privacy_guardian/web_static/: app.js  index.html  styles.css
tests/: test_desktop_ui.py  test_italian_privacy_engine.py  test_mixed_pdf_redaction.py  test_web_guardrails.py
