[project]
name = "ai-data-anonymizer"
version = "0.3.2"
description = "Local and self-hosted app for detecting and anonymizing Italian personal data."
requires-python = ">=3.10,<3.14"
dependencies = [
  "cryptography>=42",
  "Pillow>=10",
  "pypdf>=5.0",
  "pypdfium2>=4.30",
  "python-docx>=1.1",
  "reportlab>=4.2",
]

[project.optional-dependencies]
desktop = [
  "PySide6>=6.7",
]
web = [
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]
ner = [
  "spacy>=3.7",
]
build = [
  "PySide6>=6.7",
  "pyinstaller>=6.8",
  "dmgbuild>=1.6",
  "Pillow>=10",
]
windows-build = [
  "PySide6>=6.7",
  "pyinstaller>=6.8",
  "Pillow>=10",
]

[project.scripts]
ai-data-anonymizer = "privacy_guardian.app:main"
ai-data-anonymizer-web = "privacy_guardian.web_app:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
privacy_guardian = ["assets/*.svg", "web_static/*"]
